syntax = "proto3";

option java_multiple_files = true;
option java_package = "identity";
option java_outer_classname = "IdentityProto";
option objc_class_prefix = "HLW";

package identity;

import "utils.proto";

message IdentityReply {
  string code = 1;
  optional string message = 2;
  optional Identity data = 3;
}

message Identity {
  utils.UUID userId = 1;
  string loginCreds = 2;
}
